# fokuskompis

./: README.md  pyproject.toml
.github/workflows/: build-deb.yml  build-rpm.yml  transifex-sync.yml
.tx/: config
data/: se.danielnylander.fokuskompis.desktop
fokuskompis/: __init__.py  main.py
po/: fokuskompis.pot  sv.mo  sv.po
src/fokuskompis/: __init__.py  __main__.py  export.py  main.py
