[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fokuskompis"
version = "0.1.0"
description = "Focus & task manager for people with ADHD and autism"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]

[project.scripts]
fokuskompis = "fokuskompis.main:main"
